--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 					</li>
 					<li>
 					<div class="progress percent75"><span>75%</span></div>
-					<strong>JavaScript</strong>
+					<strong>Pythont</strong>
 					</li>
 				   <li>
 				   	<div class="progress percent70"><span>70%</span></div>
