--- a/index.html
+++ b/index.html
@@ -579,7 +579,11 @@
 	
 					</div> <!-- /timeline-block -->
 	
-					<div class="timeline-block">
+					<div class="col-twelve">
+ 
+				<div class="timeline-wrap">
+ 
+					   <div class="timeline-block">
 	
 						<div class="timeline-ico">
 							<i class="fa fa-spinner fa-spin"></i>
