--- a/index.html
+++ b/index.html
@@ -600,6 +600,10 @@
 						</div>
 	
 					</div> <!-- /timeline-block -->
+
+					<div class="col-twelve">
+ 
+				<div class="timeline-wrap">
 	
 					<div class="timeline-block">
 	
