--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 					</li>
 					<li>
 					<div class="progress percent75"><span>75%</span></div>
-					<strong>Pythont</strong>
+					<strong>JavaScript</strong>
 					</li>
 				   <li>
 				   	<div class="progress percent70"><span>70%</span></div>
@@ -239,12 +239,12 @@
 	   				</div>
 
 	   				<div class="timeline-header">
-	   					<h3>Alabel Central Integrated SPED Center</h3>
+	   					<h3>Elementary</h3>
 	   					<p>2008 - 2014</p>
 	   				</div>
 
 	   				<div class="timeline-content">
-	   					<h4>Elementary</h4>
+	   					<h4>Alabel Central Integrated SPED Center</h4>
 	   					<p>Magsaysay St., Poblacion Alabel Sarangani Province</p>
 	   				</div>
 
@@ -262,7 +262,7 @@
 	   				</div>
 
 	   				<div class="timeline-content">
-	   					<h4>Junior High School - Science Curriculum</h4>
+	   					<h4>Junior High School</h4>
 	   					<p>Sarangani Capitol Compound, Alabel Sarangani Province</p>
 	   				</div>
 
@@ -280,7 +280,7 @@
 	   				</div>
 
 	   				<div class="timeline-content">
-	   					<h4>Senior High School - STEM Strand</h4>
+	   					<h4>Senior High School</h4>
 	   					<p>Sarangani Capitol Compound, Alabel Sarangani Province</p>
 	   				</div>
 
@@ -298,7 +298,7 @@
 				</div>
 
 				<div class="timeline-content">
-					<h4>Bachelor's Degree - Bachelor of Science in Information Technology</h4>
+					<h4>Bachelor's Degree</h4>
 					<p>Fatima Uhaw, General Santos City</p>
 				</div>
 
@@ -579,11 +579,9 @@
 	
 					</div> <!-- /timeline-block -->
 	
-					<div class="col-twelve">
- 
-				<div class="timeline-wrap">
- 
-					   <div class="timeline-block">
+					<div class="timeline-block">
+
+						<div class="timeline-wrap">
 	
 						<div class="timeline-ico">
 							<i class="fa fa-spinner fa-spin"></i>
@@ -600,10 +598,6 @@
 						</div>
 	
 					</div> <!-- /timeline-block -->
-
-					<div class="col-twelve">
- 
-				<div class="timeline-wrap">
 	
 					<div class="timeline-block">
 	
@@ -660,6 +654,28 @@
 						</div>
  
 					</div> <!-- /timeline-block -->
+
+					<div class="col-twelve"></div>
+
+					<div class="timeline-wrap">
+ 
+						<div class="timeline-block">
+	 
+							<div class="timeline-ico">
+								<i class="fa fa-spinner fa-spin"></i>
+							</div>
+	 
+							<div class="timeline-header">
+								<h3>Rotaract Club of Dadiangas Community Based</h3>
+								<p>2022 - Present</p>
+							</div>
+	 
+							<div class="timeline-content">
+								<h4>ASPIRANT MEMBER</h4>
+								<p>General Santos City</p>
+							</div>
+	 
+						</div> <!-- /timeline-block -->
 
 				   </div> <!-- /timeline-wrap -->   			
 	
