--- a/index.html
+++ b/index.html
@@ -394,9 +394,7 @@
 
 	   			</div> <!-- /timeline-block -->
 
-				   <div class="col-twelve">
-
-					<div class="timeline-wrap">
+		
 	 
 						<div class="timeline-block">
 	 
@@ -974,6 +972,7 @@
 							</div>
 					</div> <!-- /timeline-block -->
 
+					
 
 				<div class="timeline-block">
 
@@ -993,6 +992,8 @@
 						</p>
 					</div>
 			</div> <!-- /timeline-block -->
+
+			
 
 			<div class="timeline-block">
 
@@ -1032,6 +1033,8 @@
 				</div>
 		</div> <!-- /timeline-block -->
 
+		<div class="col-twelve"></div>
+
 			<div class="timeline-block">
 
 				<div class="timeline-ico">
@@ -1051,6 +1054,8 @@
 				</div>
 
 		</div> <!-- /timeline-block -->
+
+		
 	
 			<div class="timeline-block">
 
@@ -1071,6 +1076,8 @@
 				</div>
 		</div> <!-- /timeline-block -->
 
+		<div class="col-twelve"></div>
+
 			<div class="timeline-block">
 
 				<div class="timeline-ico">
@@ -1090,6 +1097,8 @@
 				</div>
 		</div> <!-- /timeline-block -->
 
+		
+
 			<div class="timeline-block">
 
 				<div class="timeline-ico">
@@ -1116,14 +1125,14 @@
 				</div>
 
 				<div class="timeline-header">
-					<h3>Hack4Gov: Capture-the-Flag Competition</h3>
-					<p>September 1, 2023</p>
+					<h3>Regional Science, Technology, and Innovation Week (RSTW) 2023</h3>
+					<p>September 15, 2023</p>
 				</div>
 
 				<div class="timeline-content">
 					<h4>Participant</h4>
-					<p>Philippines National Computer Emergency Response Team (NCERT), and Department of Information Technology (DICT) - Region 12 andcMainland BARMM
-						-- Venue 88, General Santos City
+					<p>Department of Science and Technology XII
+						-- Sultan Kudarat Provincial Gymnasium, Isulan, Sultan Kudarat
 					</p>
 				</div>
 		</div> <!-- /timeline-block -->
