--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 					</li>
 					<li>
 					<div class="progress percent75"><span>75%</span></div>
-					<strong>JavaScript</strong>
+					<strong>Python</strong>
 					</li>
 				   <li>
 				   	<div class="progress percent70"><span>70%</span></div>
@@ -239,12 +239,12 @@
 	   				</div>
 
 	   				<div class="timeline-header">
-	   					<h3>Elementary</h3>
+	   					<h3>Alabel Central Integrated SPED Center</h3>
 	   					<p>2008 - 2014</p>
 	   				</div>
 
 	   				<div class="timeline-content">
-	   					<h4>Alabel Central Integrated SPED Center</h4>
+	   					<h4>Elementary</h4>
 	   					<p>Magsaysay St., Poblacion Alabel Sarangani Province</p>
 	   				</div>
 
@@ -262,7 +262,7 @@
 	   				</div>
 
 	   				<div class="timeline-content">
-	   					<h4>Junior High School</h4>
+	   					<h4>Junior High School - Science Curriculum</h4>
 	   					<p>Sarangani Capitol Compound, Alabel Sarangani Province</p>
 	   				</div>
 
@@ -280,7 +280,7 @@
 	   				</div>
 
 	   				<div class="timeline-content">
-	   					<h4>Senior High School</h4>
+	   					<h4>Senior High Schoo - STEM Strandl</h4>
 	   					<p>Sarangani Capitol Compound, Alabel Sarangani Province</p>
 	   				</div>
 
@@ -298,7 +298,7 @@
 				</div>
 
 				<div class="timeline-content">
-					<h4>Bachelor's Degree</h4>
+					<h4>Bachelor's Degree - BS Information Technology</h4>
 					<p>Fatima Uhaw, General Santos City</p>
 				</div>
 
