--- a/index.html
+++ b/index.html
@@ -729,6 +729,7 @@
 					<p>Department of Science and Technology – Science Education Institute (DOST-SEI)
 					 -- Zoom Meeting
 					</p>
+					<a class="button" href="https://drive.google.com/file/d/1UAfyolVHJMqaTA8X-Dnj5lIIKj6-50nm/view?usp=drive_link">Click Here for Details</a>
 				</div>
 
 			</div> <!-- /timeline-block -->
@@ -751,26 +752,6 @@
 						</p>
 					</div>
 
-				</div> <!-- /timeline-block -->
-
-					<div class="timeline-block">
-
-						<div class="timeline-ico">
-						<i class="fa fa-code" aria-hidden="true"></i>
-						</div>
-
-						<div class="timeline-header">
-							<h3>Loquinte-Padua's Stochastic Model for Aids Epidemic</h3>
-							<p>May 1, 2022</p>
-						</div>
-
-						<div class="timeline-content">
-							<h4>Participant</h4>
-							<p>Loquinte-Padua’s Stochastic Model for AIDS Epidemic
-								MSU – GenSan, Office of the International Affairs
-							-- Zoom Meeting
-							</p>
-						</div>
 
 					</div> <!-- /timeline-block -->
 
@@ -791,6 +772,7 @@
 								MSU – GenSan, Office of the International Affairs
 							-- Zoom Meeting
 							</p>
+							<a class="button" href="https://drive.google.com/file/d/1nUtsB3BlCDoZWLwJQZgbJJgWJgl51d_C/view?usp=drive_link">Click Here for Details</a>
 						</div>
 			</div> <!-- /timeline-block -->
 
@@ -811,6 +793,7 @@
 									DICT Region 12 & Mainland BARMM
 									-- Notre Dame of Dadiangas University, General Santos City
 								</p>
+								
 							</div>
 					</div> <!-- /timeline-block -->
 
@@ -830,6 +813,7 @@
 							<p>Intel Corporation
 								-- Zoom Meeting
 							</p>
+							<a class="button" href="https://drive.google.com/file/d/16Sd7EKbqkV-cqkN1WnyMIXFc6tZimxEA/view?usp=drive_link">Click Here for Details</a>
 						</div>
 				</div> <!-- /timeline-block -->
 
@@ -877,6 +861,7 @@
 								<h4>Participant</h4>
 								<p>Team StackTrek
 									-- Zoom Meeting
+									<a class="button" href="https://drive.google.com/file/d/1L2ofUv_tls2nZzx4R01ShvZWZDg4a-f7/view?usp=drive_link">Click Here for Details</a>
 								</p>
 							</div>
 
@@ -908,6 +893,7 @@
 								<p>UP Mindanao Society of Programmers and Refined Computer Scientists (SPARCS)
 									-- Zoom Meeting
 								</p>
+								<a class="button" href="https://drive.google.com/file/d/1ymvmTBjQIK4d05vqinEiSsDctWckuqTi/view?usp=drive_link">Click Here for Details</a>
 							</div>
 					</div> <!-- /timeline-block -->
 
@@ -969,6 +955,7 @@
 								<p>ICEBOX: A DOST-assisted TBI for Smart Systems Innovations
 									-- Robinsons Place, General Santos City
 								</p>
+								<a class="button" href="https://drive.google.com/file/d/1TI3X5nBEAjtCMpcc6R7Wz4tS0YQp-BTa/view?usp=drive_link">Click Here for Details</a>
 							</div>
 					</div> <!-- /timeline-block -->
 
@@ -1030,6 +1017,8 @@
 					<p>Junior Information Technology Society – MSUGSC, DevCon Davao
 						-- KCC Convention Center, General Santos City
 					</p>
+					<a class="button" href="https://drive.google.com/drive/folders/111HArUE2DZWX1_Y5WJ92ucN_0xYv_U7B?usp=sharing">Click Here for Details</a>
+
 				</div>
 		</div> <!-- /timeline-block -->
 
@@ -1051,6 +1040,7 @@
 					<p>Google Developers Student Clubs Philippines
 						-- Zoom Meeting
 					</p>
+					<a class="button" href="https://gdsc-lawig-cert.web.app/cert/LAWIG-IsQnMGhdebzBlJUqmYGp">Click Here for Details</a>
 				</div>
 
 		</div> <!-- /timeline-block -->
